@@ -81,7 +81,7 @@ enum GUIElements {
 	REPLAYS_SORT, REPLAYS_DELETE, REPLAYS_BACK, REPLAYS_UP, REPLAYS_DOWN,
 	OPTIONS_GAMEPLAY, OPTIONS_VIDEO, OPTIONS_AUDIO, OPTIONS_CONTROLS, OPTIONS_BACK,
 	GAMEPLAY_SHOWFPS, GAMEPLAY_SHOWTUTORIAL, GAMEPLAY_SAVE, GAMEPLAY_CANCEL,
-	VIDEO_SAVE, VIDEO_CANCEL, VIDEO_VIDEOMODES, VIDEO_FULLSCREEN, VIDEO_SHADOWS, VIDEO_SHADERS, VIDEO_VSYNC, VIDEO_ANISOTROPY, VIDEO_ANTIALIASING,
+	VIDEO_SAVE, VIDEO_CANCEL, VIDEO_VIDEOMODES, VIDEO_FULLSCREEN, VIDEO_SHADOWS, VIDEO_SHADERS, VIDEO_MULTIPLELIGHTS, VIDEO_VSYNC, VIDEO_ANISOTROPY, VIDEO_ANTIALIASING,
 	AUDIO_ENABLED, AUDIO_SAVE, AUDIO_CANCEL,
 	CONTROLS_SAVE, CONTROLS_CANCEL, CONTROLS_DEADZONE, CONTROLS_SENSITIVITY, CONTROLS_INVERTMOUSE, CONTROLS_INVERTGAMEPADY, CONTROLS_KEYMAP,
 	PAUSE_RESUME=(CONTROLS_KEYMAP + _Actions::COUNT), PAUSE_SAVEREPLAY, PAUSE_RESTART, PAUSE_OPTIONS, PAUSE_QUITLEVEL,
@@ -399,6 +399,10 @@ void _Menu::HandleGUI(irr::gui::EGUI_EVENT_TYPE EventType, gui::IGUIElement *Ele
 					Config.Shaders = Shaders->isChecked();
 					if(Config.Shaders)
 						Graphics.LoadShaders();
+
+					// Save multiple lights
+					gui::IGUICheckBox *MultipleLights = static_cast<gui::IGUICheckBox *>(CurrentLayout->getElementFromId(VIDEO_MULTIPLELIGHTS));
+					Config.MultipleLights = MultipleLights->isChecked();
 
 					// Save vsync
 					gui::IGUICheckBox *Vsync = static_cast<gui::IGUICheckBox *>(CurrentLayout->getElementFromId(VIDEO_VSYNC));
@@ -939,6 +943,11 @@ void _Menu::InitVideoOptions() {
 	gui::IGUICheckBox *CheckBoxShaders = irrGUI->addCheckBox(Config.Shaders, Interface.GetRectPercent(X + SidePadding, Y, 32, 32), CurrentLayout, VIDEO_SHADERS);
 	if(!Graphics.GetShadersSupported())
 		CheckBoxShaders->setEnabled(false);
+
+	// Multiple Lights
+	Y += SpacingY;
+	AddMenuText(Interface.GetPositionPercent(X - SidePadding, Y), L"Multiple Lights", _Interface::FONT_SMALL, -1, gui::EGUIA_LOWERRIGHT);
+	irrGUI->addCheckBox(Config.MultipleLights, Interface.GetRectPercent(X + SidePadding, Y, 32, 32), CurrentLayout, VIDEO_MULTIPLELIGHTS);
 
 	// Vsync
 	Y += SpacingY;
